--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "node-fetch": "^2.6.1"
   }
 }
